Restore ssl/TransportContext.java until it can use preview APIs